EKS/12-RetailApp/deploy-retail-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: retail-app
  labels:
    app: retail
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: retail-service
    tier: app
  type: LoadBalancer
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: retail-app
  labels:
    app: retail
spec:
  selector:
    matchLabels:
      app: retail-service
      tier: app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: retail-service
        tier: app
    spec:
      containers:
        - image: amitmahajan/retail-app:2.3
          name: retail-app
          ports:
            - containerPort: 3000
              name: retail-app
