EKS/12-RetailApp/deploy-retail-bff-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: retail-bff
  labels:
    app: retail
spec:
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: retail-service
    tier: apis
  type: LoadBalancer
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: retail-bff
  labels:
    app: retail
spec:
  selector:
    matchLabels:
      app: retail-service
      tier: apis
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: retail-service
        tier: apis
    spec:
      containers:
        - image: amitmahajan/retail-bff:2.4
          name: retail-service
          ports:
            - containerPort: 8000
              name: retail-service
