EKS/12-RetailApp/deploy-retail-bff-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: retail-bff
  labels:
    app: retail
spec:
  ports:
    - name: http
      port: 8000
  selector:
    app: retail
    tier: apis
  type: LoadBalancer
