EKS/12-RetailApp/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway-configuration
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"   
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: retail-app
spec:
  hosts:      
    - "*"
  gateways:
    - ingress-gateway-configuration
  http:
    - match:
      - uri :
          prefix: "/"
      route:
      - destination:
          host: retail-app
          subset: latest 
---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: retail-app
spec:
  host: retail-app
  subsets:
    - labels:
        version: latest
      name: latest
    - labels:
        version: upcoming
      name: upcoming
